[gd_scene load_steps=4 format=3 uid="uid://cg5no13kqh8hv"]

[ext_resource type="Script" path="res://src/collectibles/starch_point.gd" id="1_n6wye"]
[ext_resource type="Texture2D" uid="uid://tkxsi2wm45t6" path="res://assets/graphics/sprites/collectibles/starch_point.png" id="1_rpace"]

[sub_resource type="CircleShape2D" id="CircleShape2D_55wb1"]
radius = 23.0

[node name="StarchPoint" type="Area2D"]
scale = Vector2(0.900627, 0.900627)
script = ExtResource("1_n6wye")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_rpace")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_55wb1")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
